updated the code and cleanup to make it readable